# batch_file_move

./: README.md  build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
app/: __main__.py
bfm/: __main__.py  app.py  common.py
bfm/file_handler/: __init__.py
bfm/gui/: __init__.py  containers.py  styles.py  widgets.py
bfm/gui/windows/: main.py
bfm/menu/: __init__.py  prompt.py
bfm/migration/: __init__.py
