[metadata]
name = batch_file_move
description = A simple tool to move files from a source directory to a destination directory based on a list of files. 
version = 0.0.1
author = Djonathan de Souza
license = GNU
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    =bfm
packages = find:
python_requires = >=3.10
include_package_data = true

[options.packages.find]
where = bfm 

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    mypy>=0.960
    flake8>=4.0
    tox>=3.25

[options.package_data]
ajusta_bling = py.typed

[options.entry_points]
console_scripts =
    batch_file_move = bfm.__main__:main

[flake8]
max-line-length = 160
